MDEV-7164: innodb.innodb-alter-table-disk-full fails in buildbot on Windows

Analysis: Test case uses Linux specific error codes.

Fix: Can't run test case with Windows currently because requires
to inject error to system.